--- a/templates/index_base.html
+++ b/templates/index_base.html
@@ -11,8 +11,8 @@
     {% block title %}{% endblock %}
 </head>
 <body>
-    <header class="container-fluid text-white">
-        <nav class="navbar navbar-light bg-dark pl-lg-5 pr-lg-5">
+    <header class="container-fluid bg-hero-image text-white">
+        <nav class="navbar navbar-light bg-transparent pl-lg-5 pr-lg-5">
             <div class="container-fluid">
                 <button class="navbar-toggler border-0 hover-scale" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <img src="https://cdn.shopify.com/s/files/1/0578/4616/9762/files/menu.png?v=1638215689" height="25px" width="auto">
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Shop</a>
+                            <a class="nav-link active" aria-current="page" href="#">Cart</a>
                         </li>
                     </ul>
                 </div>
@@ -37,6 +37,12 @@
                   </div>
             </div>
         </nav>
+        <div class="hero container d-flex flex-column align-items-center justify-content-center h-100">
+            <h1 class="row fw-bold">Carve Your Own Path</h1>
+            <div class="row">
+                <a class="btn btn-primary">Shop Now</a>
+            </div>
+        </div>
     </header>
     {% block content %}{% endblock %}
     <footer class="container-fluid">
