--- a/static/styles.css
+++ b/static/styles.css
@@ -4,6 +4,10 @@ html, body {
     font-family: Helvetica, sans-serif;
 }
 
+main {
+    min-height: 80vh;
+}
+
 .bg-hero-image {
     background: linear-gradient(0deg, rgba(100, 100, 100, 0.5), rgba(100, 100, 100, 0.5)), url('https://cdn.shopify.com/s/files/1/0578/4616/9762/files/Snowboard_Hero_1.jpg?v=1625176862');
     background-position: center;
