--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href='{{ url_for("static", filename="styles.css")}}'>
     {% block title %}{% endblock %}
 </head>
-<body>
-    <header class="container-fluid text-white">
+<body class="p-0">
+    <header class="container-fluid text-white bg-dark">
         <nav class="navbar navbar-light bg-dark pl-lg-5 pr-lg-5">
             <div class="container-fluid">
                 <button class="navbar-toggler border-0 hover-scale" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
