--- a/templates/base.html
+++ b/templates/base.html
@@ -12,19 +12,19 @@
 </head>
 <body class="p-0">
     <header class="container-fluid text-white bg-dark">
-        <nav class="navbar navbar-light bg-dark pl-lg-5 pr-lg-5">
+        <nav class="navbar navbar-light bg-transparent pl-lg-5 pr-lg-5">
             <div class="container-fluid">
-                <button class="navbar-toggler border-0 hover-scale" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <img src="https://cdn.shopify.com/s/files/1/0578/4616/9762/files/menu.png?v=1638215689" height="25px" width="auto">
-                </button>
+                <a href="#"><img class="hover-scale" src="https://cdn.shopify.com/s/files/1/0578/4616/9762/files/menu.png?v=1638215689" height="25px" width="auto" data-bs-toggle="offcanvas" data-bs-target="#navigation" aria-controls="navigation"></a>
                 <a class="navbar-brand" href="#"><img src="https://cdn.shopify.com/s/files/1/0578/4616/9762/files/Yeti-Supply-Co_Text_Logo_1000x2500-01.png?v=1638215185" height="50px" width="auto"></a>
                 <a href="#"><img class="hover-scale" src="https://cdn.shopify.com/s/files/1/0578/4616/9762/files/bag.png?v=1638215333" height="25px" width="auto" data-bs-toggle="offcanvas" data-bs-target="#cart" aria-controls="cart"></a>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Shop</a>
-                        </li>
-                    </ul>
+                <div class="offcanvas offcanvas-start text-dark" tabindex="-1" id="navigation" aria-labelledby="navLabel">
+                    <div class="offcanvas-header">
+                      <h1 class="offcanvas-title h3" id="navLabel">Navigation</h5>
+                      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                      
+                    </div>
                 </div>
                 <div class="offcanvas offcanvas-end text-dark" tabindex="-1" id="cart" aria-labelledby="cartLabel">
                     <div class="offcanvas-header">
@@ -34,7 +34,7 @@
                     <div class="offcanvas-body">
                       
                     </div>
-                  </div>
+                </div>
             </div>
         </nav>
     </header>
