--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
                     <h1 class="fw-medium">Dream Catcher Splitboard</h1>
                     <p class="fw-light">In a world of increasing specialization, it's nice to get a simple one-step solution every now and then. If you're looking for a good time in the backcountry, get on the Jones Dream Catcher Splitboard.</p>
                     <div>
-                        <a class="btn btn-secondary">Shop Now</a>
+                        <a class="btn btn-secondary" href="/product/61a7c88736aa4b82ac65871d">Shop Now</a>
                     </div>
                 </div>
             </div>
@@ -23,9 +23,9 @@
         </section>
         <section class="featured-collections container-fluid">
             <div class="row">
-                <a href="" class="col-12 col-sm-4 featured-collection featured-collection-1 text-decoration-none d-flex flex-column align-items-center justify-content-center text-center"><h1 class="text-light fw-bolder">SNOWBOARDING</h1></a>
-                <a href="" class="col-12 col-sm-4 featured-collection featured-collection-2 text-decoration-none d-flex flex-column align-items-center justify-content-center text-center"><h1 class="text-light fw-bolder">SKIING</h1></a>
-                <a href="" class="col-12 col-sm-4 featured-collection featured-collection-3 text-decoration-none d-flex flex-column align-items-center justify-content-center text-center"><h1 class="text-light fw-bolder">HIKING</h1></a>
+                <a href="/collection/61a862ad2dd167b5fb1f5fc3" class="col-12 col-md-4 featured-collection featured-collection-1 text-decoration-none d-flex flex-column align-items-center justify-content-center text-center"><h1 class="text-light fw-bolder">SNOWBOARDING</h1></a>
+                <a href="/collection/61a862bd2dd167b5fb1f5fc4" class="col-12 col-md-4 featured-collection featured-collection-2 text-decoration-none d-flex flex-column align-items-center justify-content-center text-center"><h1 class="text-light fw-bolder">SKIING</h1></a>
+                <a href="/collection/61a862c52dd167b5fb1f5fc5" class="col-12 col-md-4 featured-collection featured-collection-3 text-decoration-none d-flex flex-column align-items-center justify-content-center text-center"><h1 class="text-light fw-bolder">HIKING</h1></a>
             </div>
         </section>
         <section class="join-email">
