--- a/templates/new_product.html
+++ b/templates/new_product.html
@@ -21,6 +21,15 @@
                     <label for="brand">Brand</label>
                     <input required class="form-control" type="text" name="brand">
                 </div>
+                <div class="form-group col-12">
+                    <label for="collection">Collection</label>
+                    <select required class="form-select" name="collection">
+                        {{ collections.rewind() }}
+                        {% for collection in collections %}
+                            <option value='{{ collection._id }}'>{{ collection.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
                 <div class="form-row col-12">
                     <label for="price">Price</label>
                     <div class="input-group">
