--- a/templates/account.html
+++ b/templates/account.html
@@ -12,14 +12,14 @@
                                 <p class="mb-0">{{ order.created_at.strftime('%Y-%m-%d') }}</p>
                             </div>
                             <div class="col-6 d-flex flex-row align-items-center justify-content-end">
-                                <p class="mb-0">${{ order.total }}</p>
+                                <p class="mb-0">${{'%0.2f' % order.total|float}}</p>
                             </div>
                         </a>
                     {% endfor %}
                 </div>
             {% else %}
                 <div class="mt-3">
-                    <p>You have no orders</p>
+                    <p class="text-light">You have no orders</p>
                     <a href="/shop" class="btn btn-primary">SHOP NOW</a>
                 </div>
             {% endif %}
